spec/lib/fs/folder_core/errors/detectors/folderEmpty.js
// Generated by CoffeeScript 1.12.3
(function() {
  'use strict';
  module.exports = function(dd) {
    return dd.drive([
      {
        it: 'returns empty folder path for title',
        i: ['title', 'empty/path', []],
        e: ['title', 'empty/path']
      }, {
        it: 'returns false if folder files loaded',
        i: ['title', 'success/path', [1]],
        e: false
      }
    ]);
  };

}).call(this);
